# qa-system-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code_analysis.yaml  framework_install_base.yaml  framework_install_system_executor_node.yaml  unit_tests.yaml
.github/workflows/scripts/: linter.py
.github/workflows/scripts/config/: yaml_linter_config.yaml
provisioning/playbooks/: wazuh-agent.yml  wazuh-manager.yml
provisioning/roles/wazuh/vars/: repo.yml  repo_pre-release.yml  repo_staging.yml  repo_vars.yml
src/wazuh_qa_framework/exceptions/: exceptions.py
src/wazuh_qa_framework/global_variables/: daemons.py
src/wazuh_qa_framework/meta_testing/: configuration.py  utils.py
src/wazuh_qa_framework/request/: request.py
src/wazuh_qa_framework/system/: host_manager.py  wazuh_handler.py
tests/: conftest.py
tests/generic_modules/: test_threading.py
tests/generic_modules/test_file/: test_get_file_encoding.py
tests/generic_modules/test_file_regex_checker/: test_accumulations.py  test_only_new_events.py
tests/generic_modules/test_file_regex_monitor/: test_accumulations.py  test_callback.py  test_only_new_events.py
tests/generic_modules/test_logging/: test_base_logger.py  test_framework_logger.py
tests/generic_modules/test_process/: test_capture_stderr.py  test_capture_stdout.py  test_process_monitor.py  test_run.py  test_timeout.py  test_wait.py
tests/generic_modules/test_request/: test_request_types.py  test_verify_ssl_cert.py
tests/generic_modules/test_threading/: test_basic.py
(+62 files in other folders)
