# Copyright (C) 2015-2023, Wazuh Inc.
# Created by Wazuh, Inc. <info@wazuh.com>.
# This program is free software; you can redistribute it and/or modify it under the terms of GPLv2

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'wazuh-qa-framework'
authors = [
    {name = 'Wazuh', email = 'hello@wazuh.com'},
]
description = 'Wazuh testing utilities to help programmers automate tests'
readme = 'README.md'
requires-python = ">=3.7"
version = '1.0.0'

dependencies = [
    'requests==2.28.2',
    'chardet==3.0.4',
    'psutil==5.8.0',
    'pytz==2021.1',
]

[project.optional-dependencies]
system_executor_node = [
    'ansible>=4.10.0',
    'pytest-testinfra>=6.7.0',
    'pytest==7.3.1'
]
unit_testing = [
    'pytest >= 6.2.5',
    'pyaml >= 21.8.3',
]

[project.urls]
"Homepage" = 'https://github.com/wazuh/wazuh-qa-framework'
license = 'GPLv2'

[tool.setuptools.packages.find]
where = ['src']
exclude = ['tests*']
